--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!--framework_12_bool-->
-  <link rel="stylesheet" href="css/12_bool.css.css">
+  <link rel="stylesheet" href="css/12_bool.css">
   <!--/framework_12_bool-->
   <link rel="stylesheet" href="css/style.css">
-
   <title>12_bool</title>
 </head>
-<body>
+<body class="debug">
+  <div class="container">
 
+  </div>
 </body>
 </html>
