--- a/index.html
+++ b/index.html
@@ -12,7 +12,44 @@
 </head>
 <body class="debug">
   <div class="container">
-
+    <div class="col_1"></div>
+    <div class="col_1"></div>
+    <div class="col_1"></div>
+    <div class="col_1"></div>
+    <div class="col_1"></div>
+    <div class="col_1"></div>
+    <div class="col_1"></div>
+    <div class="col_1"></div>
+    <div class="col_1"></div>
+    <div class="col_1"></div>
+    <div class="col_1"></div>
+    <div class="col_1"></div>
+  </div>
+  <div class="container">
+    <div class="col_12"></div>
+  </div>
+  <div class="container">
+    <div class="col_8"></div>
+    <div class="col_2"></div>
+    <div class="col_2"></div>
+  </div>
+  <div class="container">
+    <div class="col_1"></div>
+    <div class="col_2"></div>
+    <div class="col_2"></div>
+    <div class="col_6"></div>
+    <div class="col_1"></div>
+  </div>
+  <div class="container">
+    <div class="col_6">
+      <div class="col_2"></div>
+      <div class="col_2"></div>
+      <div class="col_8"></div>
+    </div>
+    <div class="col_6">
+      <div class="col_6"></div>
+      <div class="col_6"></div>
+    </div>
   </div>
 </body>
 </html>
