--- a/index.html
+++ b/index.html
@@ -42,13 +42,17 @@
   </div>
   <div class="container">
     <div class="col_6">
-      <div class="col_2"></div>
-      <div class="col_2"></div>
-      <div class="col_8"></div>
+      <div class="container">
+        <div class="col_2"></div>
+        <div class="col_2"></div>
+        <div class="col_8"></div>
+      </div>
     </div>
     <div class="col_6">
-      <div class="col_6"></div>
-      <div class="col_6"></div>
+      <div class="container">
+        <div class="col_6"></div>
+        <div class="col_6"></div>
+      </div>
     </div>
   </div>
 </body>
