--- a/index.html
+++ b/index.html
@@ -12,46 +12,46 @@
 </head>
 <body class="debug">
   <div class="container">
-    <div class="col_1"></div>
-    <div class="col_1"></div>
-    <div class="col_1"></div>
-    <div class="col_1"></div>
-    <div class="col_1"></div>
-    <div class="col_1"></div>
-    <div class="col_1"></div>
-    <div class="col_1"></div>
-    <div class="col_1"></div>
-    <div class="col_1"></div>
-    <div class="col_1"></div>
-    <div class="col_1"></div>
+    <div class="col_1">1 col</div>
+    <div class="col_1">1 col</div>
+    <div class="col_1">1 col</div>
+    <div class="col_1">1 col</div>
+    <div class="col_1">1 col</div>
+    <div class="col_1">1 col</div>
+    <div class="col_1">1 col</div>
+    <div class="col_1">1 col</div>
+    <div class="col_1">1 col</div>
+    <div class="col_1">1 col</div>
+    <div class="col_1">1 col</div>
+    <div class="col_1">1 col</div>
   </div>
   <div class="container">
-    <div class="col_12"></div>
+    <div class="col_12">12 col</div>
   </div>
   <div class="container">
-    <div class="col_8"></div>
-    <div class="col_2"></div>
-    <div class="col_2"></div>
+    <div class="col_8">8 col</div>
+    <div class="col_2">2 col</div>
+    <div class="col_2">2 col</div>
   </div>
   <div class="container">
-    <div class="col_1"></div>
-    <div class="col_2"></div>
-    <div class="col_2"></div>
-    <div class="col_6"></div>
-    <div class="col_1"></div>
+    <div class="col_1">1 col</div>
+    <div class="col_2">2 col</div>
+    <div class="col_2">2 col</div>
+    <div class="col_6">6 col</div>
+    <div class="col_1">1 col</div>
   </div>
   <div class="container">
     <div class="col_6">
       <div class="container">
-        <div class="col_2"></div>
-        <div class="col_2"></div>
-        <div class="col_8"></div>
+        <div class="col_2">2 col</div>
+        <div class="col_2">2 col</div>
+        <div class="col_8">8 col</div>
       </div>
     </div>
     <div class="col_6">
       <div class="container">
-        <div class="col_6"></div>
-        <div class="col_6"></div>
+        <div class="col_6">6 col</div>
+        <div class="col_6">6 col</div>
       </div>
     </div>
   </div>
