--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
   <div class="container">
     <div class="col_6">
       <div class="container">
-        <div class="col_2">2 col</div>
-        <div class="col_2">2 col</div>
-        <div class="col_8">8 col</div>
+        <div class="col_2">Nested 2 col</div>
+        <div class="col_2">Nested 2 col</div>
+        <div class="col_8">Nested 8 col</div>
       </div>
     </div>
     <div class="col_6">
       <div class="container">
-        <div class="col_6">6 col</div>
-        <div class="col_6">6 col</div>
+        <div class="col_6">Nested 6 col</div>
+        <div class="col_6">Nested 6 col</div>
       </div>
     </div>
   </div>
